--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,3 +4,9 @@ version = "0.1.0"
 edition = "2024"
 
 [dependencies]
+memmap2 = "0.6"
+parking_lot = "0.12"
+thiserror = "1.0"
+
+[dev-dependencies]
+tempfile = "3.5"
