add property tests and an invariant-check helper, add a "strict" config mode that runs extra validations, add a cargo-fuzz fuzz target and a minimal CI job to run it briefly, and wire the benchmark job to run on push/PR

--- a/.github/workflows/bench.yml
+++ b/.github/workflows/bench.yml
@@ -1,6 +1,10 @@
 name: Weekly Benchmarks
 
 on:
+  push:
+    branches: [ main ]
+  pull_request:
+    branches: [ main ]
   schedule:
     - cron: '0 3 * * 0' # every Sunday at 03:00 UTC
   workflow_dispatch:
